--- a/.github/workflows/vm-pr.yml
+++ b/.github/workflows/vm-pr.yml
@@ -54,6 +54,7 @@ jobs:
     strategy:
       matrix:
         fork: [
+          'London',
           'Berlin',
           'Istanbul',
           'MuirGlacier'
@@ -92,6 +93,7 @@ jobs:
     strategy:
       matrix:
         fork: [
+          'London',
           'Berlin',
           'MuirGlacier',
           'Istanbul',
@@ -142,7 +144,9 @@ jobs:
           '--fork=Istanbul --dir=GeneralStateTests/stTimeConsuming --expected-test-amount=15561',
           '--fork=Istanbul --excludeDir=stTimeConsuming --expected-test-amount=19817',
           '--fork=Berlin --dir=GeneralStateTests/stTimeConsuming',
-          '--fork=Berlin --excludeDir=stTimeConsuming'
+          '--fork=Berlin --excludeDir=stTimeConsuming',
+          '--fork=London --dir=GeneralStateTests/stTimeConsuming',
+          '--fork=London --excludeDir=stTimeConsuming'
         ]
       fail-fast: false
     steps:
